arreglo algunas cosas y agrego asincronismo

--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Iconos-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!--Toastify-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 	<title>Havaianas</title>
 	<!-- titulo del la pagina -->
 	<link rel="shortcut icon" href="./images/logo/HavaianasMiniLogo.png" type="image/x-icon">
 	<!-- Logo de la paguina -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-	<!-- Traigo la hoja de estilos de bootstrap -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="Fondo">
 	<nav id="mynav" class="navbar navbar-expand-lg bg-body-tertiary" >
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"><img src="./images/logo/Havaianas.png" alt="Logo" width="auto" height="75"></a>
+			<a class="navbar-brand" href="#"><img src="./images/logo/havaianas-logo-2-1-2048x404.png" alt="Logo" width="auto" height="75"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon "></span>
 			</button>
@@ -48,17 +51,25 @@
 
 
 	<main>
+		<h3 id="loaderTexto" class="text-center text-dark mb-5">Cargando productos...</h3>
 		<div id="coincidencias"class=""></div>
 		<div class="container">
 			<div id="Ojotas" class="row">
 			</div>
 		</div>
+		<!-- Loader-->
+		<div id="loader" class="d-flex justify-content-center">
+		  <div class="spinner-grow text-dark" role="status">
+			<span class="visually-hidden"></span>
+		  </div>
+		</div>
+		
 
 		<div class="modal fade" id="idModalCarrito" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 			  <div class="modal-content">
 				<div class="modal-header">
-				  <h5 class="modal-title" id="exampleModalLabel">Carrito de Compras</h5>
+				  <h5 class="modal-title" id="exampleModalLabel">Lista de pedidos</h5>
 				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body" id="modal-bodyCarrito">
@@ -71,16 +82,24 @@
 				  
 				  
 				  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-				  <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="botonFinalizarCompra">Finalizar Compra</button>
+				  <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="botonFinalizarCompra">Finalizar Pedido</button>
 				</div>
 			  </div>
 			</div>
 		  </div>
 	</main>
-
+    <!--Script de Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-    </script>    
+    </script> 
+    <!--Sweet alert-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--Toastify-->   
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--Luxon-->
+    <script src="
+    https://cdn.jsdelivr.net/npm/luxon@3.4.3/build/global/luxon.min.js
+    "></script>
     <script src="./js/mod.js"></script>
 	<script src="./js/class.js"></script>
 	<script src="./js/main.js"></script>
